load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "session",
    srcs = [
        "delegator_mock.go",
        "delegator_runner.go",
        "delegator_scenario.go",
        "delegator_tools.go",
        "event_handler.go",
        "manager.go",
        "registry.go",
        "store.go",
        "summary.go",
        "tmux_detect.go",
        "tmux_name.go",
        "tmux_notify.go",
        "tmux_runner.go",
        "types.go",
    ],
    importpath = "github.com/bazelment/yoloswe/bramble/session",
    visibility = ["//bramble:__subpackages__"],
    deps = [
        "//agent-cli-wrapper/acp",
        "//agent-cli-wrapper/claude",
        "//agent-cli-wrapper/claude/render",
        "//agent-cli-wrapper/codex",
        "//bramble/sessionmodel",
        "//multiagent/agent",
        "//yoloswe",
        "//yoloswe/planner",
    ],
)

go_test(
    name = "session_test",
    srcs = [
        "delegator_runner_test.go",
        "delegator_tools_test.go",
        "manager_provider_fallback_test.go",
        "manager_test.go",
        "provider_runner_test.go",
        "registry_test.go",
        "store_test.go",
        "summary_test.go",
        "tmux_name_test.go",
        "tmux_test.go",
    ],
    embed = [":session"],
    deps = [
        "//bramble/sessionmodel",
        "//multiagent/agent",
        "//wt",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
